# telecom-test-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  ttt.config.yaml
.agent/workflows/: post-update-checklist.md
.github/workflows/: ci.yml
5g-log-analyzer/: sample_logs.txt
5gtestscope/: main.py
examples/: flakiness_sample_results.csv  sample_gnb_log.txt  testwatch_sample_log.txt
tests/: test_pipeline.py  test_testscope.py
testwatch/: README.md  requirement.txt  setup.py
testwatch/.github/: copilot-instructions.md
testwatch/docs/: usage.md
testwatch/examples/: telecom_log.txt
testwatch/testwatch/: main.py  parser.py
tools/: __init__.py
tools/dashboard/: __init__.py  app.py  data_generator.py  data_reader.py
tools/flakiness_scorer/: __init__.py  api.py  generate_heatmap.py
tools/log_analyzer/: .gitignore  README.md  __init__.py  analyzer.py  api.py
tools/report_gen/: __init__.py  api.py  main.py
tools/report_gen/src/: __init__.py  generator.py  parsers.py
tools/report_gen/templates/: report.html
tools/testscope/: __init__.py  api.py  main.py
tools/testscope/parser/: log_parser.py
tools/testwatch/: .gitignore  api.py  main.py  parser.py  watcher.py
tools/testwatch/testwatch/: watcher.py
ttt/: __init__.py  cli.py  config.py  models.py  pipeline.py  registry.py
